--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "darkaonline/l5-swagger": "5.4.*",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.4.*",
         "laravel/homestead": "^10.8",
         "laravel/tinker": "~1.0"
